[tool.coverage.report]
fail_under = 80

[tool.pytest]
addopts = '--pydocstyle'

[tool.black]
target-version = ['py37', 'py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | \venv
    | \.aws-sam
    | _build
    | buck-out
    | build
    | dist
    | node_modules
  )/
)
'''

[tool.isort]
profile = "black"
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true

[tool.stela]
config_file_path = "./tests/fixtures"
default_environment = "test"

[tool.semantic_release]
version_variable = [
    "stela/__init__.py:__version__",
    "pyproject.toml:version"
]
branch = "main"
upload_to_pypi = true
upload_to_release = true
build_command = "python -m pip install -U twine poetry && poetry build"

[tool.poetry]
name = "stela"
version = "4.0.0"
description = "Find and read your project configuration files easily"
authors = ["Chris Maillefaud <chrismaillefaud@gmail.com>"]
readme = "README.md"
repository = "https://github.com/chrismaille/stela"
keywords = ["settings", "configuration", "parser"]
license = "GPL-3.0"

[tool.poetry.dependencies]
python = ">=3.8, <4"
loguru = "*"
pyyaml = "*"
scalpl = "*"
toml = "*"
python-dotenv = "*"

[env]
project.shared_attribute = "foo.bar"
api_timeout = 60

[env.test]
project.secret = "embed_secret"

[env.production]
api_timeout = 10

[tool.poetry.dev-dependencies]
black = {version = "*", allow-prereleases = true}
coverage = "*"
mypy = "*"
pytest = "*"
pytest-black = "*"
pytest-cov = "*"
pytest-lazy-fixture = "*"
pytest-mock = "*"
pytest-mypy = "*"
pytest-pydocstyle = "*"
pytest-xdist ="*"
yamllint = "*"
auto-changelog = "*"
isort = "*"
bandit = "*"
pre-commit = "*"
flake8 = "*"
twine = "*"
pydantic = "*"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
